Update project to Java 25
Key changes:
- Updated pom.xml to Java 25
- Updated all documentation (README, CORRELATION_ID_DEMO)
- Added notes about Scoped Values being FINALIZED in Java 25
- Noted Structured Concurrency is in Fifth Preview (API stable)
- Enhanced comments in code to reflect Java 25 status

Java 25 Status:
✅ Scoped Values: FINALIZED (production ready, no preview flag)
⚠️ Structured Concurrency: Fifth Preview (API frozen, --enable-preview still needed)
📅 Expected finalization: Java 26 (March 2026)